# range_monitor

./: Dockerfile  app.py  launch.py  pyproject.toml
assets/sample_data/: generate.py  locations.csv  products.csv  sales.csv  stock.csv
engine/: __init__.py  ingestion.py  narrator.py  sql_runner.py
engine/sql_models/: category_divergence.sql  rank_mismatch.sql  season_misclassify.sql  slow_mover.sql  stock_imbalance.sql
ui/: charts.py  dashboard.py  kpi_cards.py  processing.py  tables.py  theme.py  upload.py
ui/tabs/: category_divergence.py  rank_mismatch.py  season_misclassify.py  slow_mover.py  stock_imbalance.py
